--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/microservices": "^10.4.15",
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/platform-express": "^10.0.0",
     "bull": "^4.16.3",
@@ -37,6 +38,7 @@
     "dotenv": "^16.4.7",
     "firebase-admin": "^12.6.0",
     "mongoose": "^8.7.2",
+    "mqtt": "^5.10.3",
     "nodemailer": "^6.9.15",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
